fixed navabar alignment

--- a/client/src/components/contact/contact.css
+++ b/client/src/components/contact/contact.css
@@ -71,7 +71,8 @@ input, textarea{
        
     }
     #contact{
-        margin-bottom: 5rem;
+        margin-top: -20rem;
+        margin-bottom: 2rem;
     }
     
        }
