--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -9,7 +9,7 @@ nav{
     left: 50%;
     bottom: 2rem;
     display: flex;
-    gap: 0.8rem;
+    gap: 0.9rem;
     border-radius: 3rem;
     backdrop-filter: blur(15px);
     
