--- a/client/src/components/services/services.css
+++ b/client/src/components/services/services.css
@@ -70,6 +70,6 @@
     }
     #services{
      padding-top: 10rem;
-     margin-bottom: 40rem; /* pushes the element dowm downward */
+     margin-bottom: 80rem; /* pushes the element dowm downward */
     }
      }
