--- a/client/src/components/testimonials/testimonials.css
+++ b/client/src/components/testimonials/testimonials.css
@@ -78,6 +78,6 @@
         width: var(--container-width-sm);
      }
      #testimonials{
-        margin-bottom: -18rem;
+        margin-bottom: rem;
      }
       }
